--- a/static/custom.css
+++ b/static/custom.css
@@ -43,10 +43,12 @@ article {
 }
 
 /* AUDIO PLAYER */
-audio {
-  width: 100%;
-  margin-top: 1em;
-  accent-color: #c03a61;
+.audio-wrapper {
+  margin: 2rem auto;
+  max-width: 800px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 .video-wrapper {
