--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -24,23 +24,17 @@
             </div>
           {{ end }}
 
-
-            {{ with .Params.audio }}
-              <audio controls style="width: 100%; margin-top: 1em;">
-                <source src="/audio/{{ . }}" type="audio/mpeg">
-                Your browser does not support the audio element.
-              </audio>
-            {{ end }}
-
-          {{ if .Params.video }}
-            <div class="video-wrapper">
-              <iframe src="{{ .Params.video }}" frameborder="0" allowfullscreen></iframe>
-            </div>
-          {{ else if .Params.videoURL }}
-            {{ $urlParts := split .Params.videoURL "/" }}
-            {{ $videoID := index $urlParts (sub (len $urlParts) 1) }}
-            <div class="video-wrapper">
-              <iframe src="https://player.vimeo.com/video/{{ $videoID }}" frameborder="0" allowfullscreen></iframe>
+          {{ if .Params.spotifyEpisodeID }}
+            <div class="audio-wrapper">
+              <iframe 
+                style="border-radius:12px" 
+                src="https://open.spotify.com/embed/episode/{{ .Params.spotifyEpisodeID }}" 
+                width="100%" 
+                height="152" 
+                frameborder="0" 
+                allowtransparency="true" 
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+              </iframe>
             </div>
           {{ end }}
             
